--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "dev": "NODE_ENV=development next dev --port 3002",
     "build": "next build",
+    "build:test": "cross-env NODE_ENV=test next build",
     "format": "prettier --write .",
     "start": "next start --port 3002",
+    "start:test": "cross-env NODE_ENV=test npm start",
     "lint": "next lint"
   },
   "dependencies": {
