--- a/apps/frontend-pwa/package.json
+++ b/apps/frontend-pwa/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "dev": "NODE_ENV=development next dev --port 3001",
     "build": "next build",
+    "build:test": "cross-env NODE_ENV=test next build",
     "format": "prettier --write .",
     "start": "next start --port 3001",
+    "start:test": "cross-env NODE_ENV=test npm start",
     "lint": "next lint",
     "pushTest": "node src/testPush.js",
     "generateAvatars": "ts-node --esm src/utils/generateAvatars.ts"
