--- a/apps/backend-response-processor/package.json
+++ b/apps/backend-response-processor/package.json
@@ -10,10 +10,13 @@
   ],
   "scripts": {
     "build": "cross-env NODE_ENV=production tsup",
+    "build:test": "npm run build",
     "dev": "cross-env NODE_ENV=development npm-run-all --parallel dev:ts dev:func",
     "dev:ts": "cross-env NODE_ENV=development tsup --watch",
     "dev:func": "func start -p 7073",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "start": "func start -p 7073",
+    "start:test": "npm start"
   },
   "dependencies": {
     "@klicker-uzh/grading": "^2.0.0-alpha.23",
