--- a/turbo.json
+++ b/turbo.json
@@ -8,6 +8,10 @@
       "dependsOn": ["^build"],
       "outputs": ["dist/**", ".next/**"]
     },
+    "build:test": {
+      "dependsOn": ["^build"],
+      "outputs": ["dist/**", ".next/**"]
+    },
     "dev": {
       "cache": false,
       "outputs": ["dist/**", ".next/**"],
@@ -16,6 +20,14 @@
     "publish": {
       "cache": false,
       "dependsOn": ["build"]
+    },
+    "start": {
+      "dependsOn": ["^build", "build"],
+      "outputs": ["dist/**", ".next/**"]
+    },
+    "start:test": {
+      "dependsOn": ["^build", "build:test"],
+      "outputs": ["dist/**", ".next/**"]
     }
   }
 }
