graphql-yoga upgrade without authz

--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -37,8 +37,7 @@
     }
   ],
   "peerDependencies": {
-    "@envelop/response-cache": "^3.2.0",
-    "@graphql-yoga/node": "^2.13.13",
+    "graphql-yoga": "^3.0.0",
     "@klicker-uzh/grading": "^2.0.0-alpha.0",
     "@klicker-uzh/prisma": "^2.0.0-alpha.0"
   },
