--- a/apps/backend-docker/package.json
+++ b/apps/backend-docker/package.json
@@ -51,16 +51,11 @@
     "typescript": "4.9.4"
   },
   "dependencies": {
-    "@envelop/parser-cache": "4.7.0",
-    "@envelop/response-cache": "3.2.0",
-    "@envelop/response-cache-redis": "1.2.0",
-    "@envelop/sentry": "3.8.1",
-    "@envelop/validation-cache": "4.7.0",
-    "@escape.tech/graphql-armor": "1.4.0",
-    "@graphql-authz/core": "1.3.0",
-    "@graphql-authz/envelop-plugin": "1.0.4",
-    "@graphql-yoga/node": "2.13.13",
-    "@graphql-yoga/redis-event-target": "0.1.3",
+    "@envelop/response-cache-redis": "2.0.4",
+    "@envelop/sentry": "5.0.0",
+    "@escape.tech/graphql-armor": "1.5.0",
+    "@graphql-yoga/plugin-response-cache": "1.1.2",
+    "@graphql-yoga/redis-event-target": "1.0.0",
     "@klicker-uzh/graphql": "^2.0.0-alpha.8",
     "@klicker-uzh/prisma": "^2.0.0-alpha.9",
     "@sentry/node": "7.16.0",
@@ -70,6 +65,7 @@
     "express": "4.18.2",
     "graphql": "16.6.0",
     "graphql-ws": "5.11.2",
+    "graphql-yoga": "3.1.2",
     "ioredis": "5.2.4",
     "jsonwebtoken": "8.5.1",
     "passport": "0.6.0",
@@ -78,8 +74,5 @@
   },
   "volta": {
     "extends": "../../package.json"
-  },
-  "overrides": {
-    "@envelop/core": "^2.6.0"
   }
 }
