--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -73,6 +73,8 @@
     "autoprefixer": "10.4.13",
     "eslint-config-next": "13.1.1",
     "postcss": "8.4.18",
+    "prettier": "2.8.0",
+    "prettier-plugin-organize-imports": "3.2.1",
     "tailwindcss": "3.2.4",
     "tailwindcss-radix": "2.6.1",
     "typescript": "4.9.4"
