--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -75,6 +75,7 @@
   "dependencies": {
     "@pothos/core": "3.24.0",
     "@pothos/plugin-prisma": "3.39.0",
+    "@pothos/plugin-validation": "3.8.7",
     "@types/mathjs": "9.4.2",
     "bcryptjs": "2.4.3",
     "dayjs": "1.11.6",
@@ -84,7 +85,8 @@
     "mathjs": "11.4.0",
     "nexus": "1.3.0",
     "node-schedule": "2.1.0",
-    "validator": "13.7.0"
+    "validator": "13.7.0",
+    "zod": "3.20.2"
   },
   "volta": {
     "extends": "../../package.json"
