--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -11,14 +11,11 @@
     "analyze": "size-limit --why",
     "prebuild": "npm run generate",
     "build": "NODE_ENV=production tsup --dts",
-    "dev": "npm-run-all --parallel dev:nexus dev:graphql dev:ts",
+    "dev": "npm-run-all --parallel dev:graphql dev:ts",
     "dev:ts": "NODE_ENV=development tsup --watch --dts",
     "dev:graphql": "graphql-codegen --config codegen.ts --watch",
-    "dev:nexus": "ts-node-dev --transpile-only --no-notify -P tsconfig.nexus.json src/index.ts",
     "format": "prettier --write .",
-    "generate": "npm-run-all generate:nexus generate:graphql",
-    "generate:graphql": "graphql-codegen --config codegen.ts",
-    "generate:nexus": "ts-node --transpile-only -P tsconfig.nexus.json src/index.ts",
+    "generate": "graphql-codegen --config codegen.ts",
     "push": "ts-node --esm src/lib/push.ts",
     "size": "size-limit"
   },
@@ -57,6 +54,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "@types/jest": "^29.0.0",
+    "@types/mathjs": "9.4.2",
     "@types/node-schedule": "^2.1.0",
     "@types/validator": "^13.7.5",
     "@types/web-push": "^3.3.2",
@@ -75,15 +73,14 @@
   "dependencies": {
     "@pothos/core": "3.24.0",
     "@pothos/plugin-prisma": "3.39.0",
+    "@pothos/plugin-scope-auth": "3.16.0",
     "@pothos/plugin-validation": "3.8.7",
-    "@types/mathjs": "9.4.2",
     "bcryptjs": "2.4.3",
     "dayjs": "1.11.6",
     "generate-password": "1.7.0",
     "graphql": "16.6.0",
     "graphql-scalars": "1.20.0",
     "mathjs": "11.4.0",
-    "nexus": "1.3.0",
     "node-schedule": "2.1.0",
     "validator": "13.7.0",
     "zod": "3.20.2"
