enhance: add environment variables for the pwa and manage frontend paths such that local links work during development and production is still correct

--- a/apps/frontend-manage/.env.production
+++ b/apps/frontend-manage/.env.production
@@ -6,3 +6,6 @@ S3_HOSTNAME="sos-ch-dk-2.exo.io"
 NEXT_PUBLIC_AVATAR_BASE_PATH="https://$S3_HOSTNAME/klicker-prod/avatars"
 NEXT_PUBLIC_API_URL="https://backend-sls.$COOKIE_DOMAIN/api/graphql"
 NEXT_PUBLIC_API_URL_SSR="http://klicker-v2-prod-klicker-uzh-v2-backend-graphql:3000/api/graphql"
+
+NEXT_PUBLIC_PWA_URL="https://pwa.klicker.uzh.ch"
+NEXT_PUBLIC_MANAGE_URL="https://manage.klicker.uzh.ch"
