--- a/apps/frontend-manage/.env.cypress
+++ b/apps/frontend-manage/.env.cypress
@@ -6,3 +6,6 @@ S3_HOSTNAME="sos-ch-dk-2.exo.io"
 NEXT_PUBLIC_AVATAR_BASE_PATH="https://$S3_HOSTNAME/klicker-prod/avatars"
 NEXT_PUBLIC_API_URL="http://127.0.0.1:3000/api/graphql"
 NEXT_PUBLIC_API_URL_SSR=$NEXT_PUBLIC_API_URL
+
+NEXT_PUBLIC_PWA_URL="http://127.0.0.1:3001"
+NEXT_PUBLIC_MANAGE_URL="http://127.0.0.1:3002"
