--- a/apps/frontend-pwa/.env.production
+++ b/apps/frontend-pwa/.env.production
@@ -8,3 +8,6 @@ NEXT_PUBLIC_ADD_RESPONSE_URL="https://backend-responses.$COOKIE_DOMAIN/api/AddRe
 NEXT_PUBLIC_API_URL="https://backend-sls.$COOKIE_DOMAIN/api/graphql"
 NEXT_PUBLIC_API_URL_SSR="http://klicker-v2-prod-klicker-uzh-v2-backend-graphql:3000/api/graphql"
 NEXT_PUBLIC_WEB_PUSH_PUBLIC_KEY="BFTs2KshUdSwCqQgZzaaCZK7h3L4pd8hjJoLk1jv1-iPN9c-_7JdLkQi5IV_k3Ml4rrx12HOkcANwVk39L_RTOM"
+
+NEXT_PUBLIC_PWA_URL="https://pwa.klicker.uzh.ch"
+NEXT_PUBLIC_MANAGE_URL="https://manage.klicker.uzh.ch"
