--- a/apps/frontend-manage/package.json
+++ b/apps/frontend-manage/package.json
@@ -21,6 +21,7 @@
     "@klicker-uzh/graphql": "^2.0.0-alpha.8",
     "@klicker-uzh/markdown": "^2.0.0-alpha.8",
     "@klicker-uzh/prisma": "^2.0.0-alpha.8",
+    "@radix-ui/react-toast": "1.1.2",
     "@sentry/nextjs": "7.21.1",
     "@socialgouv/matomo-next": "1.4.0",
     "@uzh-bf/design-system": "0.1.12",
@@ -42,7 +43,6 @@
     "react-dnd": "16.0.1",
     "react-dnd-html5-backend": "16.0.1",
     "react-dom": "18.2.0",
-    "react-hot-toast": "2.4.0",
     "react-qrcode-logo": "2.8.0",
     "react-sizeme": "3.0.2",
     "react-tagcloud": "2.3.1",
