wip: add controller url to env files

--- a/apps/frontend-controller/.env.production
+++ b/apps/frontend-controller/.env.production
@@ -11,3 +11,4 @@ NEXT_PUBLIC_WEB_PUSH_PUBLIC_KEY="BFTs2KshUdSwCqQgZzaaCZK7h3L4pd8hjJoLk1jv1-iPN9c
 
 NEXT_PUBLIC_PWA_URL="https://pwa.klicker.uzh.ch"
 NEXT_PUBLIC_MANAGE_URL="https://manage.klicker.uzh.ch"
+NEXT_PUBLIC_CONTROL_URL="https://control.klicker.uzh.ch"
