--- a/apps/frontend-manage/.env.production
+++ b/apps/frontend-manage/.env.production
@@ -9,3 +9,4 @@ NEXT_PUBLIC_API_URL_SSR="http://klicker-v2-prod-klicker-uzh-v2-backend-graphql:3
 
 NEXT_PUBLIC_PWA_URL="https://pwa.klicker.uzh.ch"
 NEXT_PUBLIC_MANAGE_URL="https://manage.klicker.uzh.ch"
+NEXT_PUBLIC_CONTROL_URL="https://control.klicker.uzh.ch"
