wip: add login to controller app

--- a/apps/frontend-controller/package.json
+++ b/apps/frontend-controller/package.json
@@ -39,7 +39,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "shared-components": "*",
-    "tailwind-merge": "1.8.1"
+    "tailwind-merge": "1.8.1",
+    "yup": "v1.0.0-beta.8"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "0.4.2",
