--- a/apps/frontend-control/package.json
+++ b/apps/frontend-control/package.json
@@ -27,6 +27,7 @@
     "@socialgouv/matomo-next": "1.4.0",
     "@uzh-bf/design-system": "0.1.16",
     "body-parser": "1.20.1",
+    "dayjs": "1.11.7",
     "deepmerge": "4.2.2",
     "graphql": "16.6.0",
     "graphql-ws": "5.11.2",
