--- a/apps/frontend-control/package.json
+++ b/apps/frontend-control/package.json
@@ -10,9 +10,7 @@
     "format": "prettier --write .",
     "start": "next start --port 3003",
     "start:test": "cross-env NODE_ENV=test npm start",
-    "lint": "next lint",
-    "pushTest": "node src/testPush.js",
-    "generateAvatars": "ts-node --esm src/utils/generateAvatars.ts"
+    "lint": "next lint"
   },
   "dependencies": {
     "@apollo/client": "3.7.1",
@@ -65,8 +63,7 @@
     "tailwindcss": "3.2.4",
     "tailwindcss-radix": "2.6.1",
     "ts-node": "10.9.1",
-    "typescript": "4.9.4",
-    "web-push": "3.5.0"
+    "typescript": "4.9.4"
   },
   "volta": {
     "extends": "../../package.json"
