--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "maintainers": [
     "Roland Schlaefli <roland.schlaefli@bf.uzh.ch>",
     "Julius Schlapbach <julius.schlapbach@bf.uzh.ch>",
-    "Florina Vogel <florina.vogel@bf.uzh.ch>"
+    "Bulin Shaqiri <bulin.shaqiri@bf.uzh.ch>"
   ],
   "contributors": [
     "Alex Scheitlin <alex.scheitlin@bf.uzh.ch",
@@ -29,7 +29,8 @@
     "mnmldev <aleloewe@gmail.com>",
     "Luca Locher <luca.locher@bf.uzh.ch>",
     "Maximilian Weber <maximilian.weber@bf.uzh.ch>",
-    "Jonas Gebel <jonas.gebel@bf.uzh.ch>"
+    "Jonas Gebel <jonas.gebel@bf.uzh.ch>",
+    "Florina Vogel <florina.vogel@bf.uzh.ch>"
   ],
   "scripts": {
     "dev": "turbo run dev",
