--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -29,8 +29,8 @@
     "prisma:studio:qa": "dotenv -e .env.qa -- npm run prisma:studio",
     "prisma:studio:prod": "dotenv -e .env.production -- npm run prisma:studio",
     "preseed": "npm run build",
-    "seed": "npm-run-all seed:bf1 seed:ami seed:test",
-    "seed:test": "ENV=development ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/seed/seedTEST.ts",
+    "seed": "npm-run-all seed:test",
+    "seed:test": "ENV=development ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/data/seedTEST.ts",
     "seed:bf1": "ENV=development ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/seed/seedBF1.ts",
     "seed:ami": "ENV=development ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/seed/seedAMI.ts",
     "seed:achievements": "ENV=development ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/seed/seedAchievements.ts",
