--- a/packages/prisma/tsconfig.json
+++ b/packages/prisma/tsconfig.json
@@ -7,7 +7,8 @@
   "ts-node": {
     "transpileOnly": true,
     "moduleTypes": {
-      "src/seed/*": "esm"
+      "src/seed/*": "esm",
+      "src/data/*": "esm"
     }
   }
 }
