--- a/.github/workflows/v3_backend-docker.yml
+++ b/.github/workflows/v3_backend-docker.yml
@@ -1,15 +1,22 @@
-name: Build Docker image for frontend-manage (Production)
+name: Build Docker image for backend-docker
 
 on:
   push:
     tags: [ 'v*.*.*' ]
+    branches:
+      - "v3"
     paths:
-      - "apps/frontend-manage/**"
-      - ".github/workflows/v2_frontend-manage**"
+      - "apps/backend-docker/**"
+      - ".github/workflows/v3_backend-docker**"
+  pull_request:
+    branches: [ "v3" ]
+    paths:
+      - "apps/backend-docker/**"
+      - ".github/workflows/v3_backend-docker**"
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}/frontend-manage
+  IMAGE_NAME: ${{ github.repository }}/backend-docker
 
 jobs:
   build:
@@ -21,11 +28,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Replace .env.production with .env.qa
-        shell: bash
-        run: |
-          cp -R packages/shared-components apps/frontend-manage/shared-components
-
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
 
@@ -33,6 +35,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Log into registry ${{ env.REGISTRY }}
+        if: github.event_name != 'pull_request'
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
@@ -48,8 +51,8 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
         with:
-          context: apps/frontend-manage
-          file: apps/frontend-manage/Dockerfile
-          push: true
+          context: apps/backend-docker
+          file: apps/backend-docker/Dockerfile
+          push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
