--- a/.github/workflows/v3_frontend-manage-docker-prod.yml
+++ b/.github/workflows/v3_frontend-manage-docker-prod.yml
@@ -1,21 +1,15 @@
-name: Build Docker image for frontend-pwa (QA)
+name: Build Docker image for frontend-manage (Production)
 
 on:
   push:
-    branches:
-      - "v2"
+    tags: [ 'v*.*.*' ]
     paths:
-      - "apps/frontend-pwa/**"
-      - ".github/workflows/v2_frontend-pwa**"
-  pull_request:
-    branches: [ "v2" ]
-    paths:
-      - "apps/frontend-pwa/**"
-      - ".github/workflows/v2_frontend-pwa**"
+      - "apps/frontend-manage/**"
+      - ".github/workflows/v3_frontend-manage**"
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}/frontend-pwa
+  IMAGE_NAME: ${{ github.repository }}/frontend-manage
 
 jobs:
   build:
@@ -27,12 +21,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Prepare filesystem
+      - name: Replace .env.production with .env.qa
         shell: bash
         run: |
-          rm apps/frontend-pwa/.env.production
-          mv apps/frontend-pwa/.env.qa apps/frontend-pwa/.env.production
-          cp -R packages/shared-components apps/frontend-pwa/shared-components
+          cp -R packages/shared-components apps/frontend-manage/shared-components
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -41,7 +33,6 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Log into registry ${{ env.REGISTRY }}
-        if: github.event_name != 'pull_request'
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
@@ -57,8 +48,8 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
         with:
-          context: apps/frontend-pwa
-          file: apps/frontend-pwa/Dockerfile
-          push: ${{ github.event_name != 'pull_request' }}
+          context: apps/frontend-manage
+          file: apps/frontend-manage/Dockerfile
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
