--- a/.github/workflows/v3_frontend-manage-docker-qa.yml
+++ b/.github/workflows/v3_frontend-manage-docker-qa.yml
@@ -1,15 +1,21 @@
-name: Build Docker image for frontend-control (Production)
+name: Build Docker image for frontend-manage (QA)
 
 on:
   push:
-    tags: [ 'v*.*.*' ]
+    branches:
+      - "v3"
     paths:
-      - "apps/frontend-control/**"
-      - ".github/workflows/v2_frontend-control**"
+      - "apps/frontend-manage/**"
+      - ".github/workflows/v3_frontend-manage**"
+  pull_request:
+    branches: [ "v3" ]
+    paths:
+      - "apps/frontend-manage/**"
+      - ".github/workflows/v3_frontend-manage**"
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}/frontend-control
+  IMAGE_NAME: ${{ github.repository }}/frontend-manage
 
 jobs:
   build:
@@ -24,7 +30,9 @@ jobs:
       - name: Replace .env.production with .env.qa
         shell: bash
         run: |
-          cp -R packages/shared-components apps/frontend-control/shared-components
+          rm apps/frontend-manage/.env.production
+          mv apps/frontend-manage/.env.qa apps/frontend-manage/.env.production
+          cp -R packages/shared-components apps/frontend-manage/shared-components
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -33,6 +41,7 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Log into registry ${{ env.REGISTRY }}
+        if: github.event_name != 'pull_request'
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
@@ -48,8 +57,8 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
         with:
-          context: apps/frontend-control
-          file: apps/frontend-control/Dockerfile
-          push: true
+          context: apps/frontend-manage
+          file: apps/frontend-manage/Dockerfile
+          push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
