--- a/.github/workflows/v3_frontend-pwa-docker-prod.yml
+++ b/.github/workflows/v3_frontend-pwa-docker-prod.yml
@@ -1,22 +1,15 @@
-name: Build Docker image for backend-docker
+name: Build Docker image for frontend-pwa (Production)
 
 on:
   push:
     tags: [ 'v*.*.*' ]
-    branches:
-      - "v2"
     paths:
-      - "apps/backend-docker/**"
-      - ".github/workflows/v2_backend-docker**"
-  pull_request:
-    branches: [ "v2" ]
-    paths:
-      - "apps/backend-docker/**"
-      - ".github/workflows/v2_backend-docker**"
+      - "apps/frontend-pwa/**"
+      - ".github/workflows/v3_frontend-pwa**"
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}/backend-docker
+  IMAGE_NAME: ${{ github.repository }}/frontend-pwa
 
 jobs:
   build:
@@ -28,6 +21,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Prepare filesystem
+        shell: bash
+        run: |
+          cp -R packages/shared-components apps/frontend-pwa/shared-components
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
 
@@ -35,7 +33,6 @@ jobs:
         uses: docker/setup-buildx-action@v2
 
       - name: Log into registry ${{ env.REGISTRY }}
-        if: github.event_name != 'pull_request'
         uses: docker/login-action@v2
         with:
           registry: ${{ env.REGISTRY }}
@@ -51,8 +48,8 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
         with:
-          context: apps/backend-docker
-          file: apps/backend-docker/Dockerfile
-          push: ${{ github.event_name != 'pull_request' }}
+          context: apps/frontend-pwa
+          file: apps/frontend-pwa/Dockerfile
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
