--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
   "azureFunctions.projectRuntime": "~4",
   "debug.internalConsoleOptions": "neverOpen",
   "azureFunctions.preDeployTask": "npm prune (serverless)",
-  "azureFunctions.projectSubpath": "apps/backend-sls"
+  "azureFunctions.projectSubpath": "apps/backend-sls",
+  "githubPullRequests.ignoredPullRequestBranches": ["v3"]
 }
