--- a/.github/workflows/chart-release.yml
+++ b/.github/workflows/chart-release.yml
@@ -33,5 +33,6 @@ jobs:
         uses: helm/chart-releaser-action@v1.5.0
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          CR_SKIP_EXISTING: false
         with:
           charts_dir: deploy/charts
