--- a/deploy/charts/klicker-uzh-v3/templates/deployment-app.yaml
+++ b/deploy/charts/klicker-uzh-v3/templates/deployment-app.yaml
@@ -149,6 +149,80 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  name: {{ include "chart.fullname" . }}-frontend-control
+  labels:
+    {{- include "chart.labels" . | nindent 4 }}
+    app.kubernetes.io/component: frontend-control
+spec:
+  {{- with .Values.frontendControl.strategy }}
+  strategy:
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+  {{- if not .Values.frontendControl.autoscaling.enabled }}
+  replicas: {{ .Values.frontendControl.replicaCount }}
+  {{- end }}
+  selector:
+    matchLabels:
+      {{- include "chart.selectorLabels" . | nindent 6 }}
+      app.kubernetes.io/component: frontend-control
+  template:
+    metadata:
+      {{- with .Values.frontendControl.podAnnotations }}
+      annotations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      labels:
+        {{- include "chart.selectorLabels" . | nindent 8 }}
+        app.kubernetes.io/component: frontend-control
+    spec:
+      priorityClassName: {{ include "chart.fullname" . }}-{{ .Values.frontendControl.priorityClassName }}
+      {{- with .Values.frontendControl.imagePullSecrets }}
+      imagePullSecrets:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      securityContext:
+        {{- toYaml .Values.frontendControl.podSecurityContext | nindent 8 }}
+      containers:
+        - name: frontend-control
+          securityContext:
+            {{- toYaml .Values.frontendControl.securityContext | nindent 12 }}
+          image: "{{ .Values.frontendControl.image.repository }}:{{ .Values.frontendControl.image.tag | default .Chart.AppVersion }}"
+          imagePullPolicy: {{ .Values.frontendControl.image.pullPolicy }}
+          ports:
+            - name: http
+              containerPort: 3000
+              protocol: TCP
+          envFrom:
+            - configMapRef:
+                name: {{ include "chart.fullname" . }}-config-frontend-control
+            - secretRef:
+                name: {{ include "chart.fullname" . }}-secret-frontend-control
+          livenessProbe:
+            httpGet:
+              path: /login
+              port: http
+          readinessProbe:
+            httpGet:
+              path: /login
+              port: http
+          resources:
+            {{- toYaml .Values.frontendControl.resources | nindent 12 }}
+      {{- with .Values.frontendControl.nodeSelector }}
+      nodeSelector:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.frontendControl.affinity }}
+      affinity:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.frontendControl.tolerations }}
+      tolerations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
   name: {{ include "chart.fullname" . }}-backend-graphql
   labels:
     {{- include "chart.labels" . | nindent 4 }}
