--- a/deploy/charts/klicker-uzh-v3/templates/service-app.yaml
+++ b/deploy/charts/klicker-uzh-v3/templates/service-app.yaml
@@ -35,6 +35,23 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  name: {{ include "chart.fullname" . }}-frontend-control
+  labels:
+    {{- include "chart.labels" . | nindent 4 }}
+spec:
+  type: {{ .Values.frontendControl.service.type }}
+  ports:
+    - port: {{ .Values.frontendControl.service.port }}
+      targetPort: http
+      protocol: TCP
+      name: http
+  selector:
+    {{- include "chart.selectorLabels" . | nindent 4 }}
+    app.kubernetes.io/component: frontend-control
+---
+apiVersion: v1
+kind: Service
+metadata:
   name: {{ include "chart.fullname" . }}-backend-graphql
   labels:
     {{- include "chart.labels" . | nindent 4 }}
