--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -18,28 +18,28 @@
     "generate": "prisma generate --schema=src/prisma/schema.prisma",
     "prisma:migrate": "prisma migrate dev --schema=src/prisma/schema.prisma",
     "prisma:deploy": "prisma migrate deploy --schema=src/prisma/schema.prisma",
-    "prisma:deploy:qa": "dotenv -e .env.qa -- npm run prisma:deploy",
-    "prisma:deploy:prod": "dotenv -e .env.production -- npm run prisma:deploy",
+    "prisma:deploy:qa": "doppler run --config stg -- npm run prisma:deploy",
+    "prisma:deploy:prod": "doppler run --config prd -- npm run prisma:deploy",
     "prisma:push": "prisma db push --schema=src/prisma/schema.prisma",
-    "prisma:push:qa": "dotenv -e .env.qa -- npm run prisma:push",
+    "prisma:push:qa": "doppler run --config stg -- npm run prisma:push",
     "prisma:reset": "prisma migrate reset --schema=src/prisma/schema.prisma --skip-seed",
     "prisma:reset:seed": "prisma migrate reset --schema=src/prisma/schema.prisma",
-    "prisma:reset:qa": "dotenv -e .env.qa -- npm run prisma:reset",
+    "prisma:reset:qa": "doppler run --config stg -- npm run prisma:reset",
     "prisma:studio": "prisma studio --schema=src/prisma/schema.prisma",
-    "prisma:studio:qa": "dotenv -e .env.qa -- npm run prisma:studio",
-    "prisma:studio:prod": "dotenv -e .env.production -- npm run prisma:studio",
+    "prisma:studio:qa": "doppler run --config stg -- npm run prisma:studio",
+    "prisma:studio:prod": "doppler run --config prd -- npm run prisma:studio",
     "preseed": "npm run build",
     "seed": "npm-run-all seed:test",
     "seed:test": "ENV=development ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/data/seedTEST.ts",
     "seed:bf1": "ENV=development ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/seed/seedBF1.ts",
     "seed:ami": "ENV=development ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/seed/seedAMI.ts",
     "seed:achievements": "ENV=development ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/seed/seedAchievements.ts",
-    "seed:qa": "ENV=development npm-run-all seed:qa:test",
-    "seed:qa:test": "ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/data/seedTEST.ts dotenv_config_path=.env.qa",
-    "seed:prod": "ENV=production npm-run-all seed:prod:bf1 seed:prod:ami",
-    "seed:prod:bf1": "npm run seed:qa:bf1 -- dotenv_config_path=.env.production",
-    "seed:prod:ami": "npm run seed:qa:ami -- dotenv_config_path=.env.production",
-    "seed:prod:achievements": "ENV=production ts-node -r dotenv/config --esm --experimental-specifier-resolution=node src/seed/seedAchievements.ts dotenv_config_path=.env.production",
+    "seed:qa": "ENV=development doppler run --config stg -- npm-run-all seed:qa:test",
+    "seed:qa:test": "ts-node --esm --experimental-specifier-resolution=node src/data/seedTEST.ts",
+    "seed:prod": "ENV=production doppler run --config prd -- npm-run-all seed:prod:bf1 seed:prod:ami",
+    "seed:prod:bf1": "npm run seed:qa:bf1",
+    "seed:prod:ami": "npm run seed:qa:ami",
+    "seed:prod:achievements": "ENV=production ts-node --esm --experimental-specifier-resolution=node src/seed/seedAchievements.ts",
     "size": "size-limit"
   },
   "prisma": {
