fix: working version of add-in with react 18

--- a/apps/office-addin/package.json
+++ b/apps/office-addin/package.json
@@ -39,24 +39,25 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.8",
-    "@uzh-bf/design-system": "0.1.7",
+    "@uzh-bf/design-system": "0.1.20",
     "core-js": "^3.9.1",
     "es6-promise": "^4.2.8",
     "eslint": "^7.32.0",
     "formik": "^2.2.9",
     "prettier-plugin-organize-imports": "^3.2.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "regenerator-runtime": "^0.13.7",
     "tailwindcss-radix": "^2.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
     "@babel/preset-typescript": "^7.13.0",
+    "@types/node": "^18.11.18",
     "@types/office-js": "^1.0.256",
     "@types/office-runtime": "^1.0.23",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "@types/react-hot-loader": "^4.1.1",
     "@types/webpack": "^4.4.34",
     "@types/webpack-dev-server": "^4.1.0",
