reformat with prettier

--- a/apps/office-addin/.eslintrc.json
+++ b/apps/office-addin/.eslintrc.json
@@ -1,8 +1,4 @@
 {
-  "plugins": [
-    "office-addins"
-  ],
-  "extends": [
-    "plugin:office-addins/react"
-  ]
+  "plugins": ["office-addins"],
+  "extends": ["plugin:office-addins/react"]
 }
