--- a/apps/office-addin/tsconfig.json
+++ b/apps/office-addin/tsconfig.json
@@ -13,15 +13,12 @@
     "removeComments": false,
     "sourceMap": true,
     "target": "es5",
-    "lib": [
-      "es7",
-      "dom"
-    ],
-    "pretty": true,
+    "lib": ["es7", "dom"],
+    "pretty": true
   },
   "compileOnSave": false,
   "buildOnSave": false,
-  "ts-node": { 
-    "files": true 
+  "ts-node": {
+    "files": true
   }
 }
