--- a/apps/office-addin/package.json
+++ b/apps/office-addin/package.json
@@ -31,65 +31,69 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@fluentui/react": "^8.52.3",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/line-clamp": "^0.4.2",
-    "@tailwindcss/typography": "^0.5.8",
-    "@uzh-bf/design-system": "0.1.20",
-    "core-js": "^3.9.1",
-    "es6-promise": "^4.2.8",
-    "eslint": "^7.32.0",
-    "formik": "^2.2.9",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "regenerator-runtime": "^0.13.7",
-    "tailwindcss-radix": "^2.6.1"
+    "@fluentui/react": "8.104.8",
+    "@uzh-bf/design-system": "0.1.21",
+    "core-js": "3.27.2",
+    "es6-promise": "4.2.8",
+    "eslint": "8.32.0",
+    "formik": "2.2.9",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "regenerator-runtime": "0.13.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/preset-typescript": "^7.13.0",
+    "@babel/core": "7.20.12",
+    "@babel/preset-typescript": "7.18.6",
+    "@tailwindcss/aspect-ratio": "0.4.2",
+    "@tailwindcss/forms": "0.5.3",
+    "@tailwindcss/line-clamp": "0.4.2",
+    "@tailwindcss/typography": "0.5.9",
     "@types/node": "^18.11.18",
     "@types/office-js": "^1.0.256",
     "@types/office-runtime": "^1.0.23",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/react-hot-loader": "^4.1.1",
-    "@types/webpack": "^4.4.34",
+    "@types/webpack": "^5.0.0",
     "@types/webpack-dev-server": "^4.1.0",
-    "acorn": "^8.5.0",
-    "autoprefixer": "^10.4.13",
-    "babel-loader": "^8.2.2",
-    "copy-webpack-plugin": "^9.0.1",
-    "eslint-plugin-office-addins": "^2.1.3",
-    "eslint-plugin-react": "^7.28.0",
-    "file-loader": "^6.2.0",
-    "html-loader": "^4.1.0",
-    "html-webpack-plugin": "^5.5.0",
-    "less": "^3.9.0",
-    "less-loader": "^10.0.1",
-    "npm-run-all": "^4.1.5",
-    "office-addin-cli": "^1.5.3",
-    "office-addin-debugging": "^4.6.3",
-    "office-addin-dev-certs": "^1.9.3",
-    "office-addin-lint": "^2.2.3",
-    "office-addin-manifest": "^1.10.4",
-    "office-addin-prettier-config": "^1.2.0",
-    "os-browserify": "^0.3.0",
-    "postcss": "^8.4.19",
+    "acorn": "8.8.2",
+    "autoprefixer": "10.4.13",
+    "babel-loader": "9.1.2",
+    "copy-webpack-plugin": "11.0.0",
+    "eslint-plugin-office-addins": "2.1.4",
+    "eslint-plugin-react": "7.32.1",
+    "file-loader": "6.2.0",
+    "html-loader": "4.2.0",
+    "html-webpack-plugin": "5.5.0",
+    "npm-run-all": "4.1.5",
+    "office-addin-cli": "1.5.4",
+    "office-addin-debugging": "4.6.7",
+    "office-addin-dev-certs": "1.11.1",
+    "office-addin-lint": "2.2.4",
+    "office-addin-manifest": "1.12.0",
+    "office-addin-prettier-config": "1.2.0",
+    "os-browserify": "0.3.0",
+    "postcss": "8.4.21",
     "prettier": "2.8.3",
     "prettier-plugin-organize-imports": "3.2.2",
-    "process": "^0.11.10",
-    "source-map-loader": "^3.0.0",
-    "tailwindcss": "^3.2.4",
-    "ts-loader": "^9.4.1",
-    "typescript": "^4.3.5",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "4.7.4"
+    "process": "0.11.10",
+    "source-map-loader": "4.0.1",
+    "tailwindcss": "3.2.4",
+    "tailwindcss-radix": "2.7.0",
+    "ts-loader": "9.4.2",
+    "typescript": "4.9.4",
+    "webpack": "5.75.0",
+    "webpack-cli": "5.0.1",
+    "webpack-dev-server": "4.11.1"
   },
   "prettier": "office-addin-prettier-config",
   "browserslist": [
     "ie 11"
-  ]
+  ],
+  "volta": {
+    "extends": "../../package.json"
+  },
+  "engines": {
+    "node": ">=16"
+  }
 }
