--- a/apps/office-addin/package.json
+++ b/apps/office-addin/package.json
@@ -26,7 +26,7 @@
     "watch": "webpack --mode development --watch",
     "clear": ".\\scripts\\clear.bat",
     "dev:tailwind": "tailwindcss -i ./src/content/content.css -o ./src/content/output.css --watch",
-    "dev": "npm-run-all --parallel dev:tailwind start:content start:taskpane",
+    "dev-addin": "npm-run-all --parallel dev:tailwind start:content start:taskpane",
     "predev": "npm run clear",
     "format": "prettier --write ."
   },
