--- a/apps/frontend-pwa/.env.qa
+++ b/apps/frontend-pwa/.env.qa
@@ -4,7 +4,11 @@ S3_PATHNAME="/klicker-prod/**"
 S3_HOSTNAME="sos-ch-dk-2.exo.io"
 
 NEXT_PUBLIC_AVATAR_BASE_PATH="https://$S3_HOSTNAME/klicker-prod/avatars"
-NEXT_PUBLIC_ADD_RESPONSE_URL="https://backend-responses.klicker-qa.bf-app.ch/api/AddResponse"
-NEXT_PUBLIC_API_URL="https://backend-sls.klicker-qa.bf-app.ch/api/graphql"
+NEXT_PUBLIC_ADD_RESPONSE_URL="https://backend-responses.$COOKIE_DOMAIN/api/AddResponse"
+NEXT_PUBLIC_API_URL="https://backend-sls.$COOKIE_DOMAIN/api/graphql"
 NEXT_PUBLIC_API_URL_SSR="http://klicker-uzh-qa-klicker-uzh-v3-backend-graphql:3000/api/graphql"
 NEXT_PUBLIC_WEB_PUSH_PUBLIC_KEY="BFTs2KshUdSwCqQgZzaaCZK7h3L4pd8hjJoLk1jv1-iPN9c-_7JdLkQi5IV_k3Ml4rrx12HOkcANwVk39L_RTOM"
+
+NEXT_PUBLIC_PWA_URL="https://pwa.klicker-qa.bf-app.ch"
+NEXT_PUBLIC_MANAGE_URL="https://manage.klicker-qa.bf-app.ch"
+NEXT_PUBLIC_CONTROL_URL="https://control.klicker-qa.bf-app.ch"
