deploy: move pod annotations to values.yaml

--- a/deploy/charts/klicker-uzh-v3/values.yaml
+++ b/deploy/charts/klicker-uzh-v3/values.yaml
@@ -51,6 +51,11 @@ frontendPWA:
 
   affinity: {}
 
+  podAnnotations:
+    checksum/config: {{ include (print $.Template.BasePath "/cm-frontend-pwa.yaml") . | sha256sum }}
+    checksum/secret: {{ include (print $.Template.BasePath "/secret-frontend-pwa.yaml") . | sha256sum }}
+    release: {{ .Chart.AppVersion }}
+
 frontendManage:
   priorityClassName: production-workload
 
@@ -90,6 +95,11 @@ frontendManage:
   tolerations: []
 
   affinity: {}
+
+  podAnnotations:
+    checksum/config: {{ include (print $.Template.BasePath "/cm-frontend-manage.yaml") . | sha256sum }}
+    checksum/secret: {{ include (print $.Template.BasePath "/secret-frontend-manage.yaml") . | sha256sum }}
+    release: {{ .Chart.AppVersion }}
 
 frontendControl:
   priorityClassName: production-workload
@@ -131,6 +141,11 @@ frontendControl:
 
   affinity: {}
 
+  podAnnotations:
+    checksum/config: {{ include (print $.Template.BasePath "/cm-frontend-control.yaml") . | sha256sum }}
+    checksum/secret: {{ include (print $.Template.BasePath "/secret-frontend-control.yaml") . | sha256sum }}
+    release: {{ .Chart.AppVersion }}
+
 backendGraphql:
   priorityClassName: production-workload
 
@@ -170,6 +185,11 @@ backendGraphql:
   tolerations: []
 
   affinity: {}
+
+  podAnnotations:
+    checksum/config: {{ include (print $.Template.BasePath "/cm-backend-graphql.yaml") . | sha256sum }}
+    checksum/secret: {{ include (print $.Template.BasePath "/secret-backend-graphql.yaml") . | sha256sum }}
+    release: {{ .Chart.AppVersion }}
 
 heartbeats:
   dailyGroupScores:
