--- a/deploy/charts/klicker-uzh-v3/templates/deployment-app.yaml
+++ b/deploy/charts/klicker-uzh-v3/templates/deployment-app.yaml
@@ -19,8 +19,11 @@ spec:
       app.kubernetes.io/component: frontend-pwa
   template:
     metadata:
-      {{- with .Values.frontendPWA.podAnnotations }}
       annotations:
+        checksum/config: {{ include (print $.Template.BasePath '/cm-frontend-pwa.yaml') . | sha256sum }}
+        checksum/secret: {{ include (print $.Template.BasePath '/secret-frontend-pwa.yaml') . | sha256sum }}
+        release: {{ .Chart.AppVersion }}
+      {{- with .Values.frontendPWA.podAnnotations }}
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
@@ -93,8 +96,11 @@ spec:
       app.kubernetes.io/component: frontend-manage
   template:
     metadata:
-      {{- with .Values.frontendManage.podAnnotations }}
       annotations:
+        checksum/config: {{ include (print $.Template.BasePath '/cm-frontend-manage.yaml') . | sha256sum }}
+        checksum/secret: {{ include (print $.Template.BasePath '/secret-frontend-manage.yaml') . | sha256sum }}
+        release: {{ .Chart.AppVersion }}
+      {{- with .Values.frontendManage.podAnnotations }}
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
@@ -167,8 +173,11 @@ spec:
       app.kubernetes.io/component: frontend-control
   template:
     metadata:
-      {{- with .Values.frontendControl.podAnnotations }}
       annotations:
+        checksum/config: {{ include (print $.Template.BasePath '/cm-frontend-control.yaml') . | sha256sum }}
+        checksum/secret: {{ include (print $.Template.BasePath '/secret-frontend-control.yaml') . | sha256sum }}
+        release: {{ .Chart.AppVersion }}
+      {{- with .Values.frontendControl.podAnnotations }}
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
@@ -241,8 +250,11 @@ spec:
       app.kubernetes.io/component: backend-graphql
   template:
     metadata:
-      {{- with .Values.backendGraphql.podAnnotations }}
       annotations:
+        checksum/config: {{ include (print $.Template.BasePath '/cm-backend-graphql.yaml') . | sha256sum }}
+        checksum/secret: {{ include (print $.Template.BasePath '/secret-backend-graphql.yaml') . | sha256sum }}
+        release: {{ .Chart.AppVersion }}
+      {{- with .Values.backendGraphql.podAnnotations }}
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
