--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
   },
   "dependencies": {
     "@prisma/client": "4.8.1",
-    "prisma": "4.8.1"
+    "prisma": "4.8.1",
+    "react-colorful": "^5.6.1"
   },
   "volta": {
     "node": "18.13.0"
