enhance(frontend-manage): add pause icon between blocks on session timeline

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
   "debug.internalConsoleOptions": "neverOpen",
   "azureFunctions.preDeployTask": "npm prune (serverless)",
   "azureFunctions.projectSubpath": "apps/backend-sls",
-  "githubPullRequests.ignoredPullRequestBranches": ["v3"]
+  "githubPullRequests.ignoredPullRequestBranches": ["v3"],
+  "editor.formatOnSave": true,
 }
