--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -11,9 +11,9 @@
     "analyze": "size-limit --why",
     "prebuild": "npm run generate",
     "build": "NODE_ENV=production tsup --dts",
-    "dev": "doppler run --config dev -- npm-run-all --parallel dev:graphql dev:ts",
-    "dev:ts": "NODE_ENV=development tsup --watch --dts",
-    "dev:graphql": "graphql-codegen --config codegen.ts --watch '**/**.graphql' --watch '**/**.ts'",
+    "dev": "npm-run-all --parallel dev:graphql dev:ts",
+    "dev:ts": "doppler run --config dev -- NODE_ENV=development tsup --watch --dts",
+    "dev:graphql": "doppler run --config dev -- graphql-codegen --config codegen.ts --watch '**/**.graphql' --watch '**/**.ts'",
     "format": "prettier --write .",
     "generate": "graphql-codegen --config codegen.ts",
     "push": "ts-node --esm src/lib/push.ts",
