--- a/packages/graphql/package.json
+++ b/packages/graphql/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "analyze": "size-limit --why",
-    "prebuild": "npm run generate",
+    "//prebuild": "npm run generate",
     "build": "NODE_ENV=production tsup --dts",
     "dev": "npm-run-all --parallel dev:graphql dev:ts",
     "dev:ts": "NODE_ENV=development doppler run --config dev -- tsup --watch --dts",
@@ -17,6 +17,7 @@
     "format": "prettier --write .",
     "generate": "graphql-codegen --config codegen.ts",
     "push": "ts-node --esm src/lib/push.ts",
+    "schema": "ts-node --esm src/index.ts",
     "size": "size-limit"
   },
   "engines": {
