add url and secret to chart

--- a/deploy/charts/klicker-uzh-v2/templates/secret-backend-graphql.yaml
+++ b/deploy/charts/klicker-uzh-v2/templates/secret-backend-graphql.yaml
@@ -7,6 +7,7 @@ metadata:
 type: Opaque
 stringData:
   APP_SECRET: {{ .Values.appSecret | quote }}
+  NOTIFICATION_SECRET: {{ .Values.backendGraphql.notifications.secret | quote }}
   DATABASE_URL: {{ .Values.backendGraphql.databaseUrl | quote }}
   REDIS_CACHE_PASS: {{ .Values.backendGraphql.redisCache.pass | quote }}
   REDIS_PASS: {{ .Values.backendGraphql.redisExec.pass | quote }}
