--- a/deploy/charts/klicker-uzh-v2/values.yaml
+++ b/deploy/charts/klicker-uzh-v2/values.yaml
@@ -8,6 +8,10 @@ podSecurityContext: {}
 
 securityContext: {}
 
+notifications:
+  url: ''
+  secret: ''
+
 cron:
   dailyGroupScores: "* * * * *"
 
