--- a/deploy/charts/klicker-uzh-v2/templates/cm-backend-graphql.yaml
+++ b/deploy/charts/klicker-uzh-v2/templates/cm-backend-graphql.yaml
@@ -7,6 +7,7 @@ metadata:
     {{- include "chart.labels" . | nindent 4 }}
 data:
   API_DOMAIN: {{ .Values.backendGraphql.apiDomain | quote }}
+  NOTIFICATION_URL: {{ .Values.backendGraphql.notifications.url | quote }}
   COOKIE_DOMAIN: {{ .Values.backendGraphql.cookieDomain | quote }}
   REDIS_CACHE_HOST: {{ .Values.backendGraphql.redisCache.host | quote }}
   REDIS_CACHE_PORT: {{ .Values.backendGraphql.redisCache.port | quote }}
