markdown css import and cssnano for deduplication and minification

--- a/apps/frontend-control/package.json
+++ b/apps/frontend-control/package.json
@@ -57,6 +57,7 @@
     "@types/sharp": "^0.31.0",
     "@types/web-push": "^3.3.2",
     "autoprefixer": "10.4.13",
+    "cssnano": "5.1.15",
     "eslint-config-next": "13.1.6",
     "postcss": "8.4.21",
     "prettier": "2.8.4",
